# Node-Zero

./: .gitignore  CMakeLists.txt  LICENSE  NodeZero.sln  README.md
Backend/Backend/: Backend.cpp  Backend.vcxproj
Backend/GameAPI/: GameAPI.vcxproj
Backend/GameUI/: GameUI.vcxproj
GameAPI/: GameAPI.h  GameAPI.vcxproj  GameAPI.vcxproj.filters
GameAPI/Core/: GameFactory.cpp  GameFactory.h  IEnemy.h  IGame.h  IPlayer.h
GameAPI/Entities/: Bullet.cpp  Enemy.cpp  Game.cpp  Game.h  Player.cpp  Player.h  Position.cpp  Position.h
GameAPI/Enums/: Direction.h
GameTests/: EnemyTests.cpp  GameTests.vcxproj  PositionTests.cpp
GameUI/: GameUI.vcxproj  GameUI.vcxproj.filters  main.cpp
GameUI/Rendering/: BulletRenderer.cpp  BulletRenderer.h  PlayerRenderer.h
GameUI/UI/: HUD.h
NodeZero.Core/Core/: GameFactory.h
NodeZero.Core/Entities/: Bullet.h  Enemy.h  Game.h  Player.cpp
NodeZero.Core/Enums/: EnemyTypes.h
NodeZero.Core/include/: Game.h  GameFactory.h  GameState.h  IGame.h  ILevel.h  INode.h  IPosition.h
NodeZero.Core/include/Config/: GameConfig.h
NodeZero.Core/include/Enums/: Direction.h  EventType.h  GameScreen.h  GameState.h  NodeShape.h  NodeState.h
NodeZero.Core/include/Events/: EventManager.h  GameEvents.h  IEvent.h  IEventListener.h  IObserver.h  ISubject.h  Subject.h
NodeZero.Core/include/Services/: DamageZoneService.h  HealthService.h  IDamageZoneService.h  IHealthService.h  ILevelService.h  IPickupService.h  ISaveService.h  ISpawnService.h  IUpgradeService.h  LevelService.h  PickupService.h  SaveService.h  SpawnService.h  UpgradeService.h
NodeZero.Core/include/Systems/: ICollisionSystem.h  IMovementSystem.h  IPointsSystem.h  IScoreSystem.h  SaveSystem.h
NodeZero.Core/include/Types/: PointPickup.h  Position.h  SaveData.h  SpawnInfo.h  Vector2.h
NodeZero.Core/src/: Game.cpp  Game.h  GameFactory.cpp  Level.cpp  Level.h  Node.cpp  Node.h  Position.cpp  Position.h
NodeZero.Core/src/Events/: EventManager.cpp  Subject.cpp
NodeZero.Core/src/Services/: DamageZoneService.cpp  DamageZoneService.h  HealthService.cpp  HealthService.h  LevelService.cpp  LevelService.h  PickupService.cpp  PickupService.h  SaveService.cpp  SaveService.h  SpawnService.cpp  SpawnService.h  UpgradeService.cpp  UpgradeService.h  UpgradeService_new.h
NodeZero.Core/src/Systems/: CollisionSystem.cpp  CollisionSystem.h  MovementSystem.cpp  PointsSystem.cpp  PointsSystem.h  SaveSystem.cpp  SaveSystem.h  ScoreSystem.cpp  ScoreSystem.h
NodeZero.Tests/: EnemyTests.cpp  GameTests.cpp  LevelAndSpawnTests.cpp  PickupAndDamageTests.cpp  PlayerTests.cpp  PositionTests.cpp  ServiceTests.cpp
NodeZero.Tests/Systems/: GameCoreTest.cpp  HealthSystemTest.cpp  LevelSystemTest.cpp  UpgradeSystemTest.cpp
NodeZero.UI/: main.cpp
NodeZero.UI/Rendering/: PlayerRenderer.cpp  PlayerRenderer.h
NodeZero.UI/UI/: HUD.cpp  HUD.h
NodeZero.UI/assets/shaders/: crt.fs
NodeZero.UI/include/: EventLogger.h  GameApp.h  GameEventLogger.h  InputHandler.h  MenuFactory.h  Renderer.h  UI.h
NodeZero.UI/include/Screens/: GameOverScreen.h  GameoverScreen.h  GameplayScreen.h  IAppScreen.h  LevelCompletedScreen.h  MainMenuScreen.h  MainScreen.h  PauseMenuScreen.h  PauseScreen.h  SettingsScreen.h  UpgradesScreen.h
NodeZero.UI/include/States/: GameplayState.h  IAppState.h  MainMenuState.h  PauseMenuState.h  SettingsState.h
NodeZero.UI/include/Widgets/: Button.h  IWidget.h  Label.h  Menu.h  Slider.h
NodeZero.UI/src/: GameApp.cpp  InputHandler.cpp  MenuFactory.cpp  Renderer.cpp  UI.cpp
NodeZero.UI/src/Screens/: GameOverScreen.cpp  GameoverScreen.cpp  GameplayScreen.cpp  LevelCompletedScreen.cpp  MainMenuScreen.cpp  MainScreen.cpp  PauseMenuScreen.cpp  PauseScreen.cpp  SettingsScreen.cpp  UpgradesScreen.cpp
NodeZero.UI/src/States/: GameplayState.cpp  MainMenuState.cpp  PauseMenuState.cpp  SettingsState.cpp
NodeZero.UI/src/Widgets/: Button.cpp  Label.cpp  Menu.cpp  Slider.cpp
